name:           twitter
version:        0.1.0.0
synopsis:       Access the Twitter API.
homepage:       https://github.com/whittle/twitter
license:        MIT
license-file:   LICENSE.txt
author:         Jason Whittle
maintainer:     jason.whittle@gmail.com
copyright:      Copyright (c) 2012 Jason A. Whittle
category:       Network, API
build-type:     Simple
cabal-version:  >=1.8
stability:      experimental
tested-with:    GHC == 7.4.1
bug-reports:    https://github.com/whittle/twitter/issues
description:
  This is a driver for the Twitter API.

extra-source-files:
  README.md
  LICENSE.txt

library
  -- exposed-modules:

  -- other-modules:

  build-depends: base ==4.5.*
